@@ -46,7 +46,7 @@ export(graph, graph.adjacency, graph.star, graph.tree, graph.lattice,
 export(erdos.renyi.game, random.graph.game, degree.sequence.game,
        aging.prefatt.game, aging.barabasi.game, aging.ba.game,
        growing.random.game, barabasi.game, ba.game,
-       callaway.traits.game, establishment.game)
+       callaway.traits.game, establishment.game, grg.game)
 
 # community structure
 
